--- a/stream-three.html
+++ b/stream-three.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href=" stream-one.html">Stream One</a></li>
+            <li><a href=" index.html">Stream One</a></li>
             <li><a href=" stream-Two.html">Stream Two</a></li>
             <li><a href=" stream-Three.html">Stream Three</a></li>
         </ul>
